changement des méthodes pour affichage